--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/cannon": "^4.6.1",
     "@react-three/drei": "^8.4.0",
     "@react-three/fiber": "^7.0.24",
     "@testing-library/jest-dom": "^5.16.1",
