--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "cannon": "^0.6.2",
+    "dat.gui": "^0.7.7",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
