env: 버전 마이그레이션

--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/cannon": "^4.6.1",
-    "@react-three/drei": "^8.4.0",
-    "@react-three/fiber": "^7.0.24",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "cannon": "^0.6.2",
-    "dat.gui": "^0.7.7",
-    "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "cannon-es": "^0.20.0",
+    "gh-pages": "^6.3.0",
+    "lil-gui": "^0.20.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
-    "three": "^0.136.0",
-    "web-vitals": "^0.2.4",
+    "styled-components": "^6.1.18",
+    "three": "^0.177.0",
+    "web-vitals": "^5.0.2",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
