--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lil-gui": "^0.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.0",
     "styled-components": "^6.1.18",
